css/stylesheet.css
/*font for the entire website*/
body {
  background-color:#e5eff0;
  font-weight: 400;
  font-family: 'Muli','san-serif';
  font-size: 0.625em;
}

/*how to get 2 different colours for navigation and logo for 2 different pages?*/


/*nav styling*/

.logo{
  margin:auto;
}

header{
  display:flex;
}

header nav{
  display:flex;
  width:100%;
  padding:50px 0 50px 0;
  align-items: center; /*centers the nav text vertically*/
  justify-content: center;  /*moves the logo and nav into center*/

}

header nav ul li {
  list-style: none;
  font-size: 1.8em;
  color:#ffffff;
  flex-direction: row;

  padding-right:100px;
  padding-left:100px;
}

header nav ul li a{
  text-decoration: none;
  color:#ffffff;
}

header nav ul li a:hover{
  text-decoration: underline;
}

.selectednav{
  text-decoration:underline;
}

/*centralize website*/
.container{
  width:100%;
  margin:auto;
  padding:0px;
}


/*home page style*/
#homebackground{
  background: url(../images/background.jpg) no-repeat top center fixed;
  background-size: cover;
  padding:0px;
}

header p{
  width:40%;
  font-size:2em;
  color:#fff;
  text-align: center;
  margin: auto;
  padding:250px 100px;

}

/*placeholders for works page thumbnails*/
.work-thumbnail p{
  position: absolute;
  top: 0;
  right: 0;
  border:1px solid red;
}

.work-thumbnail {
  width:25%;
  position: relative;
  float: left;
  cursor: pointer;
}

.work-thumbnail img{ /*define that the image size is 100% so that it can be scaled in the previous level*/
  width:100%;
  height:100%;
}

.work-thumbnail:before {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(6,34,76, 0.9);
  transition: all .3s linear;
}

.work-thumbnail:hover:before{
  background: none;
}

.work-thumbnail:hover p{
  display:none;
}

/*.work-thumbnail2{
  background: rgba(6,34,76, 0.2);
  transition: all .3s linear;
}*/


/*hover styling for works thumbnails*/

/*about page style*/

